--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.3.1",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.3.12",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "sharp": "^0.21.0"
   },
   "name": "shop",
   "version": "1.0.0",
@@ -25,5 +26,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
+  },
+  "engines": {
+    "node": "10.14.2",
+    "npm": "6.4.1"
   }
 }
