--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^5.3.12",
     "multer": "^1.4.1",
+    "nodejs-base64": "^1.0.3",
     "sharp": "^0.21.0"
   },
   "name": "shop",
